fix: Update for working with the latest tools Fixes #5
Signed-off-by: Frost Ming <me@frostming.com>

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -7,7 +7,7 @@ on:
       - "news/**"
       - "*.md"
   push:
-    branches: ["master", "main"]
+    branches: ["main"]
     paths-ignore:
       - "docs/**"
       - "news/**"
@@ -18,6 +18,6 @@ jobs:
     name: Linting
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
       - uses: pre-commit/action@v2.0.0
