--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,23 @@
 [build-system]
-requires = ["pdm-pep517"]
-build-backend = "pdm.pep517.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
 [project]
 name = "pofmt"
-version = {use_scm = true}
 description = "Your missing PO formatter and linter"
 authors = [
     {name = "Frost Ming", email = "mianghong@gmail.com"}
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.6"
+requires-python = ">=3.7"
 dependencies = []
-dynamic = ["version", "classifiers"]
+dynamic = ["version"]
 
 classifiers = [
-    "Development Status :: 3 - Alpha"
+    "Development Status :: 3 - Alpha",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3"
 ]
 
 [project.urls]
@@ -28,89 +29,49 @@ pofmt = "pofmt.__main__:main"
 
 [project.optional-dependencies]
 zh = [
-    "pangu~=4.0",
+    "pangu>=4.0",
 ]
-[tool.pdm]
+
+[tool.pdm.build]
 package-dir = "src"
+
+[tool.pdm.version]
+source = "scm"
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "pytest~=6.1",
-    "towncrier~=19.2",
-    "parver~=0.3"
+    "pytest>=7.3.1",
 ]
-doc = []
 
 [tool.pdm.scripts]
-release = "python -m tasks.release"
 test = "pytest tests/"
-doc = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}
-lint = "pre-commit run --all-files"
 
 [tool.black]
-line-length = 88
-exclude = '''
-/(
-    \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-  | tests/fixtures
-)/
-'''
+line-length = 100
+target-version = ["py37", "py38", "py39", "py310"]
 
-[tool.towncrier]
-package = "pofmt"
-filename = "CHANGELOG.md"
-issue_format = "[#{issue}](https://github.com/frostming/pofmt/issues/{issue})"
-directory = "news/"
-start_string = "<!-- insertion marker -->"
-title_format = "[v{version}](https://github.com/frostming/pofmt/releases/tag/{version}) ({project_date})"
-template = "news/towncrier_template.md"
-underlines = "-~^"
+[tool.ruff]
+line-length = 100
+select = [
+  "B",    # flake8-bugbear
+  "C4",   # flake8-comprehensions
+  "E",    # pycodestyle
+  "F",    # pyflakes
+  "PGH",  # pygrep-hooks
+  "RUF",  # ruff
+  "W",    # pycodestyle
+  "YTT",  # flake8-2020
+]
+extend-ignore = ["B018", "B019"]
+src = ["src"]
+exclude = ["tests/fixtures"]
+target-version = "py37"
 
-  [[tool.towncrier.type]]
-  directory = "feature"
-  name = "Features & Improvements"
-  showcontent = true
+[tool.ruff.mccabe]
+max-complexity = 10
 
-  [[tool.towncrier.type]]
-  directory = "bugfix"
-  name = "Bug Fixes"
-  showcontent = true
-
-  [[tool.towncrier.type]]
-  directory = "doc"
-  name = "Improved Documentation"
-  showcontent = true
-
-  [[tool.towncrier.type]]
-  directory = "dep"
-  name = "Dependencies"
-  showcontent = true
-
-  [[tool.towncrier.type]]
-  directory = "removal"
-  name = "Removals and Deprecations"
-  showcontent = true
-
-  [[tool.towncrier.type]]
-  directory = "misc"
-  name = "Miscellany"
-  showcontent = true
-
-[tool.isort]
-profile = "black"
-atomic = true
-skip_glob = ["*/setup.py"]
-filter_files = true
-known_first_party = ["pofmt"]
+[tool.ruff.isort]
+known-first-party = ["pofmt"]
 
 [tool.pytest.ini_options]
 filterwarnings = [
